# stancon_talks

./: .gitignore  README.md
.github/: FUNDING.yml
2017/: README.md
2017/Contributed Talks/: 00_bios.html  presenter-bios.md
2017/Contributed Talks/01_auerbach/: crash_data.csv  model_int.stan  twelve_cities.Rmd  twelve_cities.bib
2017/Contributed Talks/02_kharratzadeh/: LICENSE.txt  epl_data.rds
2017/Contributed Talks/03_lei/: ad_attribution.Rmd  bibliography.bib  stancon_data.rda  stancon_data_lta.rda  stancon_model.stan
2017/Contributed Talks/04_ahn/: APAStyle.css  apa-short-authors.csl  apa_modified.csl  biomed-central.csl  hBayesDM_StanCon.Rmd  hBayesDM_StanCon.md  hBayesDM_bib_short.bib
2017/Contributed Talks/06_groves/: IRT simulation notebook.ipynb  binary_irt.stan  correction_notes_and_bio_teddy_groves.txt
2017/Contributed Talks/07_nicenboim/: activation-based.stan  activation-based_h_Kfold.stan  dataNIG-SRC.Rda  direct_access_h.stan  direct_access_h_Kfold.stan  kfold.Rmd  retrieval_models.Rmd
2017/Contributed Talks/08_trangucci/: forecasts_in_stan.Rmd
2017/Contributed Talks/09_sanders/: Annualized Rate of Mass Shootings; Sanders & Lei (StanCon2017 - revised).ipynb  README.md  gp_model_final.stan  input_data_rhoweak_final.R
2017/Contributed-Talks/01_auerbach/: model.stan
2017/Contributed-Talks/02_kharratzadeh/: README.md  epl_model.rds  epl_model.stan  epl_rev.Rmd
2018/: README.md
2018-helsinki/: README.md
2018-helsinki/Contributed-Talks/nielsen/: LICENSE  README.md  Stancon.hs  stack.yaml  stancon.cabal  stancon.html
(+413 files in other folders)
